--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=remotemysql.com
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=6wcR5Ync85
-DB_USERNAME=6wcR5Ync85
-DB_PASSWORD=dhXsVrtdGL
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
