--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "@tailwindcss/postcss7-compat": "^2.0.3",
         "autoprefixer": "^9.8.6",
         "core-js": "^3.6.5",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
         "vue-router": "^4.0.5",
-        "vue-server-renderer": "^2.6.12"
+        "vue-server-renderer": "^2.6.12",
+        "webpack": "^5.27.0"
     },
     "devDependencies": {
         "@vue/babel-preset-app": "^4.5.12",
@@ -23,7 +23,7 @@
         "@vue/cli-plugin-eslint": "^4.5.12",
         "@vue/cli-plugin-router": "^4.5.12",
         "@vue/cli-service": "^4.5.12",
-        "@vue/compiler-sfc": "^3.0.0",
+        "@vue/compiler-sfc": "^3.0.7",
         "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "babel-eslint": "^10.1.0",
@@ -35,10 +35,11 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.2.8",
+        "postcss-loader": "^5.2.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
         "vue": "^3.0.7",
         "vue-loader": "^16.1.2",
         "vue-template-compiler": "^2.6.12"
